fixed overflow

--- a/style.css
+++ b/style.css
@@ -133,11 +133,13 @@ body{
 .books1{
     display:flex;
     flex-wrap:wrap;
-    padding-top:20px;
-    padding-bottom:20px;
-    width:20.1%;
+    padding: 5px 5px 5px 5px;
+    border:5px black solid;
+    margin-top:20px;
+    margin-bottom:20px;
+    width:22%;
     background-color:grey;
-    height:300px;
+    height:400px;
 }
 
 .container1{
@@ -152,17 +154,34 @@ body{
 
 .title3{
     display:flex;
-    align-items:center;
-    font-size:2rem;
-    height:20%;
-    width:100%;
     justify-content:center;
-    align-content:center;
+    overflow:scroll;
+    align-items:center;
+    font-size:1.5rem;
+    height:26%;
+    width:100%;
+}
+
+.title6{
+    display:flex;
+    margin:auto;
+    overflow:scroll;
+    font-size:1.5rem;
 }
 
 .title4{
     display:flex;
     align-items:center;
+    height:14%;
+    width:100%;
+    justify-content:center;
+    align-content:center;
+}
+
+.title5{
+    display:flex;
+    align-items:center;
+    font-size:1.5rem;
     height:20%;
     width:100%;
     justify-content:center;
